--- a/wow/src/WowArtGalleries/Gallery/Art.scss
+++ b/wow/src/WowArtGalleries/Gallery/Art.scss
@@ -15,12 +15,12 @@
       position: absolute;
       left: 50%;
       top: 50%;
-      height: 66%;
+      width: 90%;
+      height: max-content;
       transform: translate(-50%, -50%);
-      width: max-content;
 
       img {
-        height: 100%;
+        width: 100%;
       }
     }
 
@@ -28,8 +28,8 @@
       position: absolute;
       left: 50%;
       top: 50%;
-      width: 83%;
-      height: 61%;
+      width: 85%;
+      aspect-ratio: 0.75;
       transform: translate(-50%, -50%);
 
       div {
@@ -39,8 +39,7 @@
         padding: 10%;
         display: flex;
         justify-content: center;
-        //convert -scale 10% -blur 0x5 -resize 1000% 4.avif 4_blur_light.avif
-        //convert -scale 5% -blur 0x10 -resize 2000% 4.avif 4_blur_light.avif
+
         img {
           object-fit: contain;
           max-width: 100%;
@@ -53,22 +52,19 @@
       position: absolute;
       left: 50%;
       top: 50%;
-      width: 83%;
-      height: 61%;
+      width: 85%;
+      aspect-ratio: 0.75;
       transform: translate(-50%, -50%);
       overflow: hidden;
 
       div {
-        opacity: 0.7;
         position: relative;
         width: 100%;
         height: 100%;
         display: flex;
         padding: 3%;
         justify-content: center;
-        ///convert 1_blur_light.avif -bordercolor black -fill white \
-        //                  \( -clone 0 -colorize 100 -shave 200x200 -border 200x200 -blur 0x80 \) \
-        //                  -compose copyopacity -composite 1_blur_fade.avif
+
         img {
           object-fit: fill;
           width: 100%;
@@ -81,8 +77,8 @@
       position: absolute;
       left: 50%;
       top: 50%;
-      width: 83%;
-      height: 61%;
+      width: 85%;
+      aspect-ratio: 0.75;
       transform: translate(-50%, -50%);
       overflow: hidden;
 
